--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "mongoose": "^5.13.14",
     "socket.io": "^4.5.0"
   },
   "devDependencies": {
